# LinguaStream

./: .gitignore  .replit  Pasted--Architectural-Design-1-High-Level-Architecture-Frontend-User-Interface-Th-1727953363620.txt  README.md  app.py  models.py  pyproject.toml  requirements.txt
static/css/: styles.css
static/js/: main.js
templates/: index.html
