[tool.poetry]
name = "repl-nix-linguastream"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.9"
email-validator = "^2.2.0"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-socketio = "^5.4.1"
googletrans = "3.1.0a0"
eventlet = "^0.37.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
